# rosegarden

./: .cdtproject  .cproject  .cvsignore  .project  AUTHORS  CMakeLists.txt  COPYING  Doxyfile  INSTALL  Makefile.am  Makefile.dist  Makefile.in  README  README.DEVELOPERS  SConstruct  TODO  TRANSLATORS  ac_include_me_if_no_alsa.m4  acinclude.m4  add_flac_patch  bootstrap.sh  cc_bsd_configure  cc_distcc_configure  cc_gcc3_configure  cc_linux_configure  cc_show_todo  config.h.in  config.py  config.status  configure  configure.ac  configure.in  configure.in.in  convert.pl  dependencies  generic.py  gl_configure  kde.py  make-dependencies  make_distrib  (+16 more)
base/: .cvsignore  AnalysisTypes.C  AnalysisTypes.h  AudioDevice.C  AudioDevice.h  AudioLevel.C  AudioLevel.h  AudioPluginInstance.C  AudioPluginInstance.h  BaseProperties.C  BaseProperties.h  Clipboard.C  Clipboard.h  CloningWrapper.h  Colour.C  Colour.h  ColourMap.C  ColourMap.h  Composition.C  Composition.h  CompositionAdapter.C  CompositionAdapter.h  CompositionTimeSliceAdapter.C  CompositionTimeSliceAdapter.h  Configuration.C  Configuration.h  ControlParameter.C  ControlParameter.h  Controllable.h  Device.C  Device.h  Element.C  Element.h  Element2.C  Element2.h  Equation.C  Equation.h  Event.C  Event.h  Exception.C  (+81 more)
base/old/: CloningWrapper.h  Equation.C  Equation.h  FastVector.h  FastVector_new.h  FileMmapper.C  FileMmapper.h  Lockable.cxx  Lockable.h  TimedVector.h  test.C
base/test/: Makefile  colour.C  colour.output  pitch.C  test.C  thread.C
data/: CMakeLists.txt  ExceptionStrings.cpp  data.qrc  mk-data  rosegarden.qrc  rosegarden.qss
data/appdata/: rosegarden.appdata.xml
data/autoload/: autoload.rg
data/chords/: a_flat_major.xml  a_major.xml  chords.qrc  chords.xml  g_sharp.xml
data/desktop/: rosegarden.desktop
data/examples/: Bach_pp_2.rose  Brandenburg_No3-BWV_1048.rg  Chopin-Prelude-in-E-minor-Aere.rg  Djer-Fire.rg  Hallelujah_Chorus_from_Messiah.rg  Romanza.rg  autoload.rg  aveverum.rg  aylindaamiga.rg  bogus-surf-jam.rg  bwv-1060-trumpet-duet-excerpt.rg  children.rg  colourmap-fragment.xml  doodle-q.rg  exercise_notation.rg  glazunov-for-solo-and-piano-with-cue.rg  glazunov.rg  glazunov.rose  headers-and-unicode-lyrics.rg  himno_de_riego.rg  interpretation-example.rg  let-all-mortal-flesh.rg  lilypond-alternative-endings.rg  lilypond-directives.rg  lilypond-staff-groupings.rg  logical-segments-4.rg  mandolin-sonatina.rg  marks-test.rg  mozart-quartet.rg  notation-for-string-orchestra-in-D-minor.rg  perfect-moment.rg  ravel-pc-gmaj-adagio.rg  rg-stats.xsl  sicut-locutus.rg  stormy-riders.rg  test_cc.rg  test_tuplets.rg  the-rose-garden.rg  vivaldi-cs3mv2.rg  vivaldi.rose  (+1 more)
data/fonts/: LilyPond-feta-design20.pfa  LilyPond-feta-nummer-design10.pfa  LilyPond-parmesan-design20.pfa  README.regenerated  SConscript
data/locale/: README  ca.qm  ca.ts  cs.qm  cs.ts  cy.qm  cy.ts  de.qm  de.ts  en.qm  en.ts  en_GB.qm  en_GB.ts  en_US.qm  en_US.ts  es.qm  es.ts  et.qm  et.ts  eu.qm  eu.ts  fi.qm  fi.ts  fr.qm  fr.ts  id.qm  id.ts  it.qm  it.ts  ja.qm  ja.ts  nl.qm  nl.ts  pl.qm  pl.ts  pt_BR.ts  rosegarden.ts  ru.qm  ru.ts  sv.qm  (+3 more)
data/mime/: rosegarden.xml
data/percussion/: PercussionMap.xml
data/pitches/: tunings.xml
data/pixmaps/: pixmaps.qrc
data/presets/: README  presets-de.xml  presets-editable-de.conf  presets-editable.conf  presets.xml  regenerate-presets
data/rc/: README  audiomanager.rc  (+21 more)
gui/: .cvsignore  Makefile.am  Makefile.in  RosegardenTransport.ui  SConscript  audiocommands.cpp  audiocommands.h  audiomanager.rc  audiomanagerdialog.cpp  audiomanagerdialog.h  audioplugindialog.cpp  audioplugindialog.h  audiopluginmanager.cpp  audiopluginmanager.h  audiopluginoscgui.cpp  audiopluginoscgui.h  audiopreviewthread.cpp  audiopreviewthread.h  audiopreviewupdater.cpp  audiopreviewupdater.h  audiosynthmanager.cpp  audiosynthmanager.h  bankeditor.cpp  bankeditor.h  bankeditor.rc  barbuttons.cpp  barbuttons.h  basestrings.h  basiccommand.cpp  basiccommand.h  chord.cpp  chord.h  chordnameruler.cpp  chordnameruler.h  clefindex.h  clefinserter.rc  colours.cpp  colours.h  colourwidgets.cpp  colourwidgets.h  (+338 more)
rosegarden/: .cdtproject  .cvsignore  .project  .svnignore  AUTHORS  CMakeLists.txt  Doxyfile  INSTALL  Makefile.am  Makefile.in  README  SConstruct  TODO  TRANSLATORS  ac_include_me_if_no_alsa.m4  acconfig.h  acinclude.m4  bkkde.py  bksys.py  cc_bsd_configure  cc_gcc3_configure  cc_icc_configure  cc_linux_configure  cc_show_todo  changelog.rb  config.status  configure  configure.in  configure.in.in  gl_configure  kde.py  make_distrib  rb_configure  rosegarden-4.spec  rosegarden-4mdk.spec  rosegarden.lsm  rosegarden.spec.in  sound.py  subdirs
rosegarden.old/: .cvsignore  AUTHORS  Makefile.am  Makefile.dist  Makefile.in  acinclude.m4  aclocal.m4  am_edit  cc_gcc3_configure  cc_linux_configure  config.h.in  configure  configure.in  configure.in.in  gl_configure  mkinstalldirs  rosegardengui.kdevprj  rosegardengui.lsm
sequencer/: .cvsignore  Makefile.am  SConscript  main.cpp  mmappedcontrolblock.cpp  mmappedcontrolblock.h  mmappedsegment.cpp  mmappedsegment.h  rosegardensequencer.cpp  rosegardensequencer.h  rosegardensequenceriface.h  sequencermapper.cpp  sequencermapper.h
sound/: .cvsignore  AlsaDriver.cpp  AlsaDriver.h  AlsaPort.cpp  AlsaPort.h  ArtsDriver.cpp  ArtsDriver.h  Audio.h  AudioCache.cpp  AudioCache.h  AudioFile.cpp  AudioFile.h  AudioFileManager.cpp  AudioFileManager.h  AudioFilePlayer.cpp  AudioFilePlayer.h  AudioPlayQueue.cpp  AudioPlayQueue.h  AudioProcess.cpp  AudioProcess.h  AudioScheduler.h  Audit.cpp  Audit.h  BWFAudioFile.cpp  BWFAudioFile.h  ControlBlock.cpp  ControlBlock.h  DSSIPluginFactory.cpp  DSSIPluginFactory.h  DSSIPluginInstance.cpp  DSSIPluginInstance.h  DummyDriver.h  ExternalTransport.h  JackDriver.cpp  JackDriver.h  LADSPAPluginFactory.cpp  LADSPAPluginFactory.h  LADSPAPluginInstance.cpp  LADSPAPluginInstance.h  MP3AudioFile.cpp  (+79 more)
src/: BaseFileList.txt  CMakeLists.txt  GUIFileList.txt  MiscFileList.txt  SequencerFileList.txt  SoundFileList.txt  TestFileList.txt
(+5724 files in other folders)
