KDE_CXXFLAGS = $(USE_EXCEPTIONS)

# create a static library with libtool
noinst_LTLIBRARIES = libbase.la

libbase_la_LDFLAGS = $(all_libraries)

INCLUDES= $(all_includes)

libbase_la_SOURCES = AnalysisTypes.C \
                     AudioDevice.C \
	             BaseProperties.C \
		     Clipboard.C \
		     Composition.C \
		     CompositionTimeSliceAdapter.C \
                     Configuration.C \
		     Equation.C \
		     Event.C \
                     Instrument.C \
                     MidiDevice.C \
		     NotationTypes.C \
                     Property.C \
		     PropertyMap.C \
		     PropertyName.C \
		     Quantizer.C \
		     RealTime.C \
		     RulerScale.C \
		     Segment.C \
		     SegmentMatrixHelper.C \
		     SegmentNotationHelper.C \
		     SegmentPerformanceHelper.C \
		     Selection.C \
                     Studio.C \
                     Track.C \
		     ViewElement.C \
		     XmlExportable.C


