KDE_CXXFLAGS = $(USE_EXCEPTIONS)

# create a static library with libtool
noinst_LTLIBRARIES = libbase.la

libbase_la_LDFLAGS = $(all_libraries)

INCLUDES= $(all_includes)

libbase_la_SOURCES = AnalysisTypes.C \
                     AudioDevice.C \
                     AudioPluginInstance.C \
	             BaseProperties.C \
		     Clipboard.C \
	             Colour.C \
	             ColourMap.C \
		     Composition.C \
		     CompositionTimeSliceAdapter.C \
                     Configuration.C \
                     ControlParameter.C \
                     Device.C \
		     Equation.C \
		     Event.C \
		     Exception.C \
                     Instrument.C \
                     LayoutEngine.C \
                     Lock.C \
                     Marker.C \
                     MidiDevice.C \
                     MidiProgram.C \
                     MidiTypes.C \
		     NotationTypes.C \
		     Profiler.C \
                     Property.C \
		     PropertyMap.C \
		     PropertyName.C \
		     Quantizer.C \
		     RealTime.C \
		     RulerScale.C \
		     Segment.C \
		     SegmentMatrixHelper.C \
		     SegmentNotationHelper.C \
		     SegmentPerformanceHelper.C \
		     Selection.C \
		     Sets.C \
		     SnapGrid.C \
		     Staff.C \
		     StringHash.C \
                     Studio.C \
                     Track.C \
		     ViewElement.C \
		     XmlExportable.C


